# BeProduct.Python.SDK

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  main.yml  mkdocs.yml  setup.cfg
.github/workflows/: automatic-release.yml  codeql-analysis.yml  python-publish.yml
docs/: 001-quick-start-guide.md  002-install.md  003-getting-refresh-token.md  003-identifying-domain.md  004-beproduct-api-client.md  040-style-api.md  050-material-api.md  060-image-api.md  070-color-api.md  072-block-api.md  075-apps.md  077-sharing.md  080-directory.md  085-users.md  090-custom-integration.md  100-automation.md  conf.py  index.md  index.rst
examples/: .env.example
examples/async/: create_style.py  get_styles.py  test_token.py  upload_style_image.py
examples/sync/: create_style.py
src/beproduct/: __init__.py  _automation.py  _automation_async.py  _block.py  _block_async.py  _color.py  _color_async.py  _common.py  _common_apps.py  _common_apps_async.py  _common_attributes.py  _common_attributes_async.py  _common_comments.py  _common_comments_async.py  _common_revisions.py  _common_revisions_async.py  _common_share.py  _common_share_async.py  _common_tags.py  _common_tags_async.py  _common_upload.py  _common_upload_async.py  _directory.py  _directory_async.py  _encoder.py  _exception.py  _helpers.py  _helpers_async.py  _image.py  _image_async.py  _material.py  _material_async.py  _raw_api.py  (+13 more)
tests/: _common_apps_test.py  _common_attributes_test.py  _common_upload_test.py  _style_test.py  conftest.py  pytest.ini  requirements-test.txt  test_config.py  test_helpers.py
(+37 files in other folders)
