[metadata]
name = beproduct
version = 0.1.17
author = Yuri Golub
author_email = support@beproduct.com
description = BeProduct Public API SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BeProduct/BeProduct.Python.SDK
project_urls =
    Bug Tracker = https://github.com/BeProduct/BeProduct.Python.SDK/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests

[options.packages.find]
where = src
