[metadata]
name = beproduct
version = 0.6.17
author = Yuri Golub
author_email = support@beproduct.com
description = BeProduct Public API SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BeProduct/BeProduct.Python.SDK
project_urls =
    Bug Tracker = https://github.com/BeProduct/BeProduct.Python.SDK/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = 
    src.beproduct
    src.beproduct.helpers
python_requires = >=3.9
install_requires =
    requests
